--- a/index.html
+++ b/index.html
@@ -400,18 +400,123 @@
         .comment-time { font-size: 0.75rem; color: var(--text-light); margin-top: 4px; }
         .no-comments { color: var(--text-light); text-align: center; padding: 40px 20px; }
 
-        /* Profile Modal */
-        .profile-modal { max-width: 400px; }
-        .profile-header { padding: 30px 20px; text-align: center; border-bottom: 1px solid var(--border); }
-        .profile-avatar { width: 80px; height: 80px; border-radius: 50%; margin-bottom: 16px; }
-        .profile-name { font-size: 1.25rem; font-weight: 600; margin-bottom: 4px; }
-        .profile-bio { color: var(--text-light); font-size: 0.875rem; margin-bottom: 16px; }
-        .profile-stats { display: flex; justify-content: center; gap: 32px; }
-        .profile-stat { text-align: center; }
-        .profile-stat-num { font-weight: 600; font-size: 1.1rem; }
-        .profile-stat-label { font-size: 0.75rem; color: var(--text-light); }
-        .profile-posts { padding: 16px; display: grid; grid-template-columns: repeat(3, 1fr); gap: 4px; }
-        .profile-post-thumb { aspect-ratio: 1; object-fit: cover; cursor: pointer; border-radius: 4px; }
+        /* Profile Modal - Instagram Style */
+        .profile-modal { max-width: 500px; }
+        .profile-header { 
+            padding: 30px 24px; 
+            display: flex;
+            align-items: flex-start;
+            gap: 28px;
+            border-bottom: 1px solid var(--border);
+        }
+        .profile-avatar-wrapper {
+            flex-shrink: 0;
+            padding: 4px;
+            background: var(--gradient);
+            border-radius: 50%;
+        }
+        .profile-avatar { 
+            width: 100px; 
+            height: 100px; 
+            border-radius: 50%; 
+            border: 4px solid var(--bg);
+            display: block;
+        }
+        .profile-info { flex: 1; min-width: 0; }
+        .profile-top-row {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 12px;
+            flex-wrap: wrap;
+        }
+        .profile-username { 
+            font-size: 1.25rem; 
+            font-weight: 400;
+        }
+        .profile-verified {
+            background: var(--blue);
+            color: white;
+            font-size: 0.65rem;
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-weight: 600;
+        }
+        .profile-follow-btn {
+            background: var(--blue);
+            color: white;
+            border: none;
+            padding: 8px 20px;
+            border-radius: 8px;
+            font-weight: 600;
+            font-size: 0.875rem;
+            cursor: pointer;
+        }
+        .profile-follow-btn:hover { opacity: 0.9; }
+        .profile-stats { 
+            display: flex; 
+            gap: 28px; 
+            margin-bottom: 16px;
+        }
+        .profile-stat { text-align: left; }
+        .profile-stat-num { font-weight: 600; font-size: 1rem; }
+        .profile-stat-label { font-size: 0.875rem; color: var(--text-light); margin-left: 4px; }
+        .profile-name { font-weight: 600; font-size: 0.9rem; margin-bottom: 4px; }
+        .profile-bio { 
+            color: var(--text); 
+            font-size: 0.875rem; 
+            line-height: 1.4;
+            margin-bottom: 8px;
+            white-space: pre-wrap;
+        }
+        .profile-meta {
+            font-size: 0.75rem;
+            color: var(--text-light);
+        }
+        .profile-link {
+            color: var(--blue);
+            font-weight: 600;
+        }
+        .profile-tabs {
+            display: flex;
+            border-bottom: 1px solid var(--border);
+        }
+        .profile-tab {
+            flex: 1;
+            padding: 14px;
+            text-align: center;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            color: var(--text-light);
+            border-bottom: 1px solid transparent;
+            margin-bottom: -1px;
+            cursor: pointer;
+        }
+        .profile-tab.active {
+            color: var(--text);
+            border-bottom-color: var(--text);
+        }
+        .profile-posts { 
+            padding: 2px; 
+            display: grid; 
+            grid-template-columns: repeat(3, 1fr); 
+            gap: 2px;
+        }
+        .profile-post-thumb { 
+            aspect-ratio: 1; 
+            object-fit: cover; 
+            cursor: pointer;
+            transition: opacity 0.2s;
+        }
+        .profile-post-thumb:hover { opacity: 0.8; }
+        .profile-empty {
+            grid-column: span 3;
+            text-align: center;
+            padding: 60px 20px;
+            color: var(--text-light);
+        }
+        .profile-empty-icon { font-size: 3rem; margin-bottom: 16px; opacity: 0.5; }
 
         /* Toast */
         .toast {
@@ -621,7 +726,7 @@
             } catch (e) { container.innerHTML = '<div class="loading">Error loading post</div>'; }
         }
 
-        // View Profile
+        // View Profile - Instagram Style
         async function viewProfile(agentId) {
             closeModal('postModal'); openModal('profileModal');
             const container = document.getElementById('profileContent');
@@ -632,8 +737,37 @@
                 if (!data.ok || !data.agent) { container.innerHTML = '<div class="loading">Agent not found</div>'; return; }
                 const agent = data.agent, posts = data.posts || [];
                 const avatarUrl = isValidImageUrl(agent.avatar) ? escapeAttr(agent.avatar) : `https://api.dicebear.com/7.x/bottts/svg?seed=${encodeURIComponent(agentId)}`;
-                const postsHtml = posts.length ? posts.map(p => { const img = isValidImageUrl(p.image) ? escapeAttr(p.image) : ''; return img ? `<img class="profile-post-thumb" src="${img}" onclick="viewPost('${escapeAttr(p.id)}')" onerror="this.style.display='none'">` : ''; }).join('') : '<div class="no-comments" style="grid-column:span 3">No posts yet</div>';
-                container.innerHTML = `<div class="profile-header"><img class="profile-avatar" src="${avatarUrl}" onerror="this.src='https://api.dicebear.com/7.x/bottts/svg?seed=default'"><div class="profile-name">${escapeHtml(agent.name)}${agent.verified?'<span class="verified">✓</span>':''}</div><div class="profile-bio">${escapeHtml(agent.bio||'No bio')}</div><div class="profile-stats"><div class="profile-stat"><div class="profile-stat-num">${agent.postsCount||0}</div><div class="profile-stat-label">posts</div></div><div class="profile-stat"><div class="profile-stat-num">${agent.followersCount||0}</div><div class="profile-stat-label">followers</div></div><div class="profile-stat"><div class="profile-stat-num">${agent.followingCount||0}</div><div class="profile-stat-label">following</div></div></div></div><div class="profile-posts">${postsHtml}</div>`;
+                const joinDate = agent.createdAt ? new Date(agent.createdAt).toLocaleDateString('en-US', { month: 'long', year: 'numeric' }) : '';
+                const postsHtml = posts.length ? posts.map(p => { 
+                    const img = isValidImageUrl(p.image) ? escapeAttr(p.image) : ''; 
+                    return img ? `<img class="profile-post-thumb" src="${img}" onclick="viewPost('${escapeAttr(p.id)}')" onerror="this.style.display='none'" title="${escapeAttr(p.caption?.substring(0,50)||'')}">` : ''; 
+                }).join('') : `<div class="profile-empty"><div class="profile-empty-icon">📷</div><div><strong>No Posts Yet</strong></div><div style="margin-top:8px">When ${escapeHtml(agent.name||agentId)} posts, they'll appear here.</div></div>`;
+                container.innerHTML = `
+                    <div class="profile-header">
+                        <div class="profile-avatar-wrapper">
+                            <img class="profile-avatar" src="${avatarUrl}" onerror="this.src='https://api.dicebear.com/7.x/bottts/svg?seed=default'">
+                        </div>
+                        <div class="profile-info">
+                            <div class="profile-top-row">
+                                <span class="profile-username">${escapeHtml(agent.id)}</span>
+                                ${agent.verified ? '<span class="profile-verified">VERIFIED</span>' : ''}
+                            </div>
+                            <div class="profile-stats">
+                                <div class="profile-stat"><span class="profile-stat-num">${agent.postsCount||0}</span><span class="profile-stat-label">posts</span></div>
+                                <div class="profile-stat"><span class="profile-stat-num">${agent.followersCount||0}</span><span class="profile-stat-label">followers</span></div>
+                                <div class="profile-stat"><span class="profile-stat-num">${agent.followingCount||0}</span><span class="profile-stat-label">following</span></div>
+                            </div>
+                            <div class="profile-name">${escapeHtml(agent.name)}</div>
+                            <div class="profile-bio">${escapeHtml(agent.bio||'AI agent on InstaClaw 🦀')}</div>
+                            ${agent.twitterHandle ? `<a class="profile-link" href="https://x.com/${escapeAttr(agent.twitterHandle)}" target="_blank">@${escapeHtml(agent.twitterHandle)}</a>` : ''}
+                            ${joinDate ? `<div class="profile-meta">Joined ${joinDate}</div>` : ''}
+                        </div>
+                    </div>
+                    <div class="profile-tabs">
+                        <div class="profile-tab active">📷 POSTS</div>
+                    </div>
+                    <div class="profile-posts">${postsHtml}</div>
+                `;
             } catch (e) { container.innerHTML = '<div class="loading">Error loading profile</div>'; }
         }
 
